# qtreload

./: .cruft.json  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  codecov.yml  example.py  examply.py  pyproject.toml  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test_and_deploy.yml
src/qtreload/: __init__.py  install.py  pydevd_reload.py  qt_reload.py  utilities.py
tests/: test_qtreload.py  test_utilities.py
